Resolved misalignments of homepage contents

--- a/style.css
+++ b/style.css
@@ -136,7 +136,7 @@ header .navbar a:hover {
 
 header .icons a {
     font-size: 2.5rem;
-    color: white
+    color: white;
     margin-left: 1.5rem;
 }
 
@@ -204,14 +204,14 @@ body {
 }
 /* Add more styles as needed for other elements */
 
-.home{
+/* .home{
     display: flex;
     align-items: center;
     min-height: 100vh;
     background: url(images/background-home.png) no-repeat;
     background-size: cover;
     background-position: center;
-    animation: floatInFromRight 2s ease-out forwards; /* Image floats from right */
+    animation: floatInFromRight 2s ease-out forwards; 
 }
 .home {
   display: flex;
@@ -221,7 +221,68 @@ body {
   background-size: cover;
   background-position: center;
   min-height: 110vh;
+} */
+
+.home {
+    display: flex;
+    align-items: center;
+    min-height: 100vh;
+    background: url('images/background-home.png') no-repeat;
+    background-size: cover;
+    background-position: center;
 }
+.illustration {
+    display: none;
+}
+
+@media (max-width: 768px) {
+    .home {
+        flex-direction: column;
+        justify-content: flex-start;
+        align-items: center;
+        text-align: center;
+        background: none;
+        padding-top: 180px;
+        background-color: #e3e3ff;
+    }
+    .illustration {
+        display: block;
+        max-width: 100%;
+        height: auto;
+        margin-right: 340px;
+        /* margin: 0 auto; */
+    }
+    .content {
+        background-color: transparent;
+        color: #333;
+    }
+    h3 {
+        font-size: 5rem;
+        color: #333;
+    }
+    p {
+        color: #555;
+    }
+}
+
+@media (max-width: 426px) {
+    .home {
+        flex-direction: column;
+        justify-content: flex-start;
+        align-items: center;
+        text-align: center;
+        background: none;
+        padding-top: 280px;
+        background-color: #e3e3ff;
+    }
+
+    .illustration { 
+        display: none;
+    }
+}
+
+
+
 /* Dark mode styles */
 .dark-mode {
     background-color: #121212;
@@ -364,9 +425,8 @@ body {
 .footer .footer-section .social-icons a:hover {
     color: white;
     text-decoration: none;
-
     color: #3f10ea;
- main
+ 
 }
 
 .footer a {
@@ -630,4 +690,4 @@ body {
   align-content: center;
 }
 
-
+}
